Correcting UiPath Product Name

--- a/SecretServer.SecureStore/SecretServer.SecureStore.csproj
+++ b/SecretServer.SecureStore/SecretServer.SecureStore.csproj
@@ -7,7 +7,7 @@
     <Authors>Thycotic</Authors>
     <Company>Thycotic</Company>
     <Product>SecretServer.SecureStore</Product>
-    <Description>Plugin integration for UI Path Orchestrator</Description>
+    <Description>Plugin integration for UiPath Orchestrator</Description>
   </PropertyGroup>
 
   <ItemGroup>
