--- a/SecretServer.SecureStore/SecretServer.SecureStore.csproj
+++ b/SecretServer.SecureStore/SecretServer.SecureStore.csproj
@@ -14,8 +14,9 @@
     <PackageReference Include="Thycotic.SecretServer.Sdk" Version="1.4.1" />
     <PackageReference Include="Thycotic.SecretServer.Sdk.Extensions.Configuration" Version="1.4.1" />
     <PackageReference Include="Thycotic.SecretServer.Sdk.Extensions.Integration" Version="1.4.1" />
-    <PackageReference Include="UiPath.Orchestrator.Extensibility" Version="1.0.2" />
+    <PackageReference Include="UiPath.Orchestrator.Extensibility" Version="1.0.4" />
     <PackageReference Include="ILRepack.MSBuild.Task" Version="2.0.13" PrivateAssets="All" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.7.0" />
   </ItemGroup>
 
   <ItemGroup>
