--- a/SecretServer.SecureStore.Tests/SecretServer.SecureStore.Tests.csproj
+++ b/SecretServer.SecureStore.Tests/SecretServer.SecureStore.Tests.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="MSTest.TestFramework" Version="1.4.0" />
     <PackageReference Include="coverlet.collector" Version="1.0.1" />
     <PackageReference Include="NSubstitute" Version="4.2.1" />
+    <PackageReference Include="System.Diagnostics.EventLog" Version="4.7.0" />
     <PackageReference Include="Thycotic.SecretServer.Sdk.Extensions.Integration" Version="1.4.1" />
     <PackageReference Include="UiPath.Orchestrator.Extensibility" Version="1.0.4" />
   </ItemGroup>
