--- a/SecretServer.SecureStore/SecretServer.SecureStore.csproj
+++ b/SecretServer.SecureStore/SecretServer.SecureStore.csproj
@@ -11,6 +11,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.Diagnostics.EventLog" Version="4.7.0" />
     <PackageReference Include="Thycotic.SecretServer.Sdk" Version="1.4.1" />
     <PackageReference Include="Thycotic.SecretServer.Sdk.Extensions.Configuration" Version="1.4.1" />
     <PackageReference Include="Thycotic.SecretServer.Sdk.Extensions.Integration" Version="1.4.1" />
